bitbake: toaster: projecttopbar Use the project in context to get num builds
Use the project in the template context rather than ajax request to get
the number of ended builds.

(From bitbake rev: 1f6bfa876b17a600fc83c789af8aaa2639a463b2)

Signed-off-by: Michael Wood <michael.g.wood@intel.com>
Signed-off-by: Elliot Smith <elliot.smith@intel.com>
Signed-off-by: Richard Purdie <richard.purdie@linuxfoundation.org>

--- a/bitbake/lib/toaster/toastergui/templates/projecttopbar.html
+++ b/bitbake/lib/toaster/toastergui/templates/projecttopbar.html
@@ -28,7 +28,7 @@
     <ul class="nav nav-pills">
       <li>
         <a href="{% url 'projectbuilds' project.id %}">
-          Builds (<span class="total-builds">0</span>)
+          Builds ({{project.get_number_of_builds}})
         </a>
       </li>
       <li id="topbar-configuration-tab">
